--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@headlessui/react": "^2.1.8",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.5.6",
-    "next": "14.2.13",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.13",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
